--- a/index.html
+++ b/index.html
@@ -68,5 +68,5 @@
             </main>
         </div>
     </body>
-    <script src="./js/script.js" type="module"></script>
+    <script src="./scripts.js" type="module"></script>
 </html>
