--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
                         <div class="searchOption">
                             <input type="text" id="searchInput"
-                                placeholder="Search..." />
+                                placeholder="Title, Genre, Overview, ..." />
                             <div class="searchIcon-container"><img
                                     src="./assets/search.png" alt="search icon"
                                     width="24" height="24">
